<resources>
    <string name="app_name">Android Malware Analyzer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Malware Analyzer</string>
    <string name="nav_header_subtitle">TFG - dapuente13, joseignaciodg, Rymond3</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_info">Information</string>

    <string name="menu_home">Home</string>
    <string name="menu_apps_info">Apps information</string>
    <string name="menu_signature_analyzer">Signature analyzer</string>
    <string name="menu_permission_analyzer">Permission analyzer</string>
    <string name="menu_log_analyzer">Log analyzer</string>
    <string name="menu_prev_results">Previous results</string>
    <string name="menu_server_settings">Server settings</string>
    <string name="menu_about_us">About us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_settings_header">Server connections [IPv4:Port]</string>
    <string name="signature_analisis">Signature Analisis</string>
    <string name="check_signature">CHECK SIGNATURE</string>
</resources>
